<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal" >

        <requestFocus /> 
    </EditText>
<!--  -->
    <TextView
        android:id="@+id/txtBodyFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bodyfat"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edtBodyfat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal" />
<!--  --> 
<TextView
        android:id="@+id/txtBodyWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BodyWater"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edtBodyWater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal" />
<!--  -->    <TextView
        android:id="@+id/txtBodyBone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BodyBone"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edtBodyBone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/btnAdd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" 
        android:onClick="onClickAddHandler"
        />

    <TextView
        android:id="@+id/textHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>